Orchestration with translation